testdata/baselines/reference/submodule/compiler/genericConstraintOnExtendedBuiltinTypes2.errors.txt
genericConstraintOnExtendedBuiltinTypes2.ts(20,38): error TS2304: Cannot find name 'Tween'.


==== genericConstraintOnExtendedBuiltinTypes2.ts (1 errors) ====
    module EndGate {
        export interface ICloneable {
            Clone(): any;
        }
    }
    
    interface Number extends EndGate.ICloneable { }
    
    module EndGate.Tweening {
        export class Tween<T extends ICloneable>{
            private _from: T;
    
            constructor(from: T) {
                this._from = from.Clone();
            }
        }
    }
    
    module EndGate.Tweening {
        export class NumberTween extends Tween<Number>{
                                         ~~~~~
!!! error TS2304: Cannot find name 'Tween'.
            constructor(from: number) {
                super(from);
            }
        }
    }